<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.lds</groupId>
    <artifactId>lds-experiment-neo4j-graphql-tbv</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>LinkedDataStore Experiment with Neo4j GraphQL library and time-based versioning</name>
    <description>LinkedDataStore Experiment with Neo4j GraphQL library and time-based versioning</description>
    <url>https://github.com/statisticsnorway/lds-experiment-neo4j-graphql-tbv</url>
    <inceptionYear>2018</inceptionYear>

    <properties>
        <java.version>14</java.version>
        <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>

        <slf4j.version>1.7.30</slf4j.version>
        <logback.version>1.2.3</logback.version>
    </properties>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Kim Christian Gaarder</name>
            <email>kim.christian.gaarder@gmail.com</email>
            <url>https://www.linkedin.com/in/kimchristiangaarder/</url>
            <organization>Capra Consulting AS</organization>
            <organizationUrl>https://www.capraconsulting.no/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/statisticsnorway/lds-experiment-neo4j-graphql-tbv.git</connection>
        <developerConnection>scm:git:git@github.com:statisticsnorway/lds-experiment-neo4j-graphql-tbv.git</developerConnection>
        <url>https://github.com/statisticsnorway/lds-experiment-neo4j-graphql-tbv/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>no.ssb.config</groupId>
            <artifactId>dynamic-configuration</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>org.neo4j</groupId>
            <artifactId>neo4j-graphql-java</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.neo4j.driver</groupId>
            <artifactId>neo4j-java-driver</artifactId>
            <version>4.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>runtime</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.mail</groupId>
                    <artifactId>javax.mail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>${module.build.sourceEncoding}</encoding>
                    <meminitial>64m</meminitial>
                    <maxmem>512m</maxmem>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <autoVersionSubmodules>false</autoVersionSubmodules>
                    <useReleaseProfile>false</useReleaseProfile>
                    <goals>deploy</goals>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
